--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <!-- Header -->
-
 <body>
     <header class="container-fluid">
         <div class="row">
@@ -45,20 +44,334 @@
         </div>
     </header>
     <main class="container mt-5">
-        <div class="main_about row">
-    <main class="container mt-5">
-        <div class="main_about row">
-            <h4>Đinh Quang Hiếu</h4>
-            <p>Student - CSE.TLU</p>
-            <div class="col-md-6">
-                <img src="images/img1.jpeg" alt="" class="img-fluid rounded">
-            </div>
-            <div class="col-md-6">
-                <h4>About</h4>
-                <p class="my_intro">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, nostrum asperiores fugiat, ex
-                    officiis aliquam eum ipsum eligendi optio nisi explicabo est vitae, sint odio saepe aliquid repellat
-                    rem illum!
-                </p>
-            </div>
+      <div class="main-about row">
+        <h4>Đinh Quang Hiếu</h4>
+        <p>Student - CSE.TLU</p>
+        <div class="col-md-6">
+          <img src="images/img1.jpeg" alt="" class="img-fluid rounder" />
         </div>
+        <div class="col-md-6">
+          <h4>About</h4>
+          <p class="my_intro">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+            quam itaque labore doloribus quos sequi minus, eos commodi voluptas
+            error consequuntur aspernatur ullam dolorum architecto rerum! Labore
+            quam modi repellendus!
+          </p>
+        </div>
+      </div>
+      <div class="main_featured row mt-5">
+        <h4>Featured post</h4>
+        <div class="col-md">
+          <figure class="figure">
+            <img
+              src="images/img2.jpeg"
+              class="figure-img img-fluid rounded"
+              alt="..."
+            />
+            <figcaption class="figure-caption">
+              A caption for the above image.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md">
+          <figure class="figure">
+            <img
+              src="images/img3.jpeg"
+              class="figure-img img-fluid rounded"
+              alt="..."
+            />
+            <figcaption class="figure-caption">
+              A caption for the above image.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md">
+          <figure class="figure">
+            <img
+              src="images/img5.jpeg"
+              class="figure-img img-fluid rounded"
+              alt="..."
+            />
+            <figcaption class="figure-caption">
+              A caption for the above image.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md">
+          <figure class="figure">
+            <img
+              src="images/img6.jpeg"
+              class="figure-img img-fluid rounded"
+              alt="..."
+            />
+            <figcaption class="figure-caption">
+              A caption for the above image.
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </main>
+    <section class="posts_slider container-fluid mt-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h4>Title 01</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Title 02</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h4>Title 03</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Title 04</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h4>Title 05</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Title 06</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Non modi neque fugiat quasi, porro sapiente harum autem
+                      sequi, quae asperiores assumenda repudiandae. Saepe
+                      cupiditate corporis excepturi quia, quis dignissimos
+                      laboriosam?
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact mt-5">
+      <div class="container">
+        <h3 class="mb-3">Contact (Đinh Quang Hiếu)</h3>
+        <form class="row g-3 needs-validation" novalidate>
+          <div class="col-md-4">
+            <label for="name1" class="form-label">First Name</label>
+            <input
+              type="text"
+              id="name1"
+              class="form-control"
+              value="Hiếu"
+              required
+            />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+          <div class="col-md-4">
+            <label for="name2" class="form-label">Last Name</label>
+            <input
+              type="text"
+              id="name2"
+              class="form-control"
+              value="Đinh"
+              required
+            />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+          <div class="col-md-4">
+            <label for="username" class="form-label">Username</label>
+            <div class="input-group has-validation">
+              <span class="input-group-text">@</span>
+              <input type="text" class="form-control" id="username" required />
+              <div class="invalid-feedback">Choose a username</div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label for="city" class="form-label">City</label>
+            <input type="text" id="city" class="form-control" required />
+            <div class="invalid-feedback">Choose a city</div>
+          </div>
+          <div class="col-md-3">
+            <label for="selectarea" class="form-label">State</label>
+            <select id="selectarea" class="form-select" required>
+              <option selected disabled>Choose</option>
+              <option>...</option>
+            </select>
+            <div class="invalid-feedback">Select a valid state</div>
+          </div>
+          <div class="col-md-3">
+            <label for="zip" class="form-control">ZIP</label>
+            <input type="text" class="form-control" id="zip" required />
+            <div class="invalid-feedback">Provide a valid zip</div>
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="check"
+                required
+              />
+              <label for="form-check-label" form="check"> Agreed </label>
+              <div class="invalid-feedback">You have to agree</div>
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Submit Form</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <footer class="container bg-light">
+      <div class="row mt-5 mb-4">
+        <div class="col-md">
+          <h4><i class="bi bi-twitter"></i> Footer Item</h4>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h4><i class="bi bi-twitter"></i> Footer Item</h4>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h4><i class="bi bi-twitter"></i> Footer Item</h4>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h4><i class="bi bi-twitter"></i> Footer Item</h4>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none link-primary">Item</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row mt-2 mb-4">
+        <hr />
+        <div class="col-md text-center text-muted">&copy; DinhQuangHieu 11/2021</div>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
